--- a/packages/ui/alert/stories/index.stories.mdx
+++ b/packages/ui/alert/stories/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {Basic} from './index.stories'
+import {Demo} from './index.stories'
 
-<Meta title="设计文档/Welcome" component={Basic} />
+<Meta title="设计文档/Welcome" component={Demo} />
 
 # OSUI Alert
 
@@ -9,6 +9,6 @@ import {Basic} from './index.stories'
 
 <Preview>
   <Story name="Demo">
-        {Basic()}
+        {Demo()}
   </Story>
 </Preview>
