docs(docs): 完善docs文档

--- a/packages/ui/modal/stories/index.stories.mdx
+++ b/packages/ui/modal/stories/index.stories.mdx
@@ -5,7 +5,18 @@ import {Demo} from './index.stories'
 
 # OSUI Modal
 
-一些给UE看的文档说明，可以放在这里
+## API
+
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/modal-cn/#API)
+
+### 新增属性
+
+|参数|说明|类型|默认值|
+|:---|:----:|:---:|------:|
+|bodyHeight|`body`数据较多，可以设置高度，会显示`header`和`footer`的边框|number|-|
+
 
 <Preview>
   <Story name="Demo">
