--- a/packages/ui/progress/stories/index.stories.mdx
+++ b/packages/ui/progress/stories/index.stories.mdx
@@ -5,7 +5,13 @@ import {Demo} from './index.stories'
 
 # OSUI Progress
 
-一些给UE看的文档说明，可以放在这里
+## API
+
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/progress-cn/#API)
+
+
 
 <Preview>
   <Story name="Demo">
