fix: fix alert,input,timeline

--- a/packages/ui/alert/stories/index.stories.mdx
+++ b/packages/ui/alert/stories/index.stories.mdx
@@ -5,7 +5,14 @@ import {Demo} from './index.stories'
 
 # OSUI Alert
 
-一些给UE看的文档说明，可以放在这里
+## API
+
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/alert-cn/)
+
+### 使用方法
+
 
 <Preview>
   <Story name="Demo">
