--- a/packages/ui/input/stories/index.stories.mdx
+++ b/packages/ui/input/stories/index.stories.mdx
@@ -3,9 +3,9 @@ import {Demo} from './index.stories'
 
 <Meta title="设计文档/Welcome" component={Demo} />
 
-# OSUI Alert
+# OSUI Input
 
-一些给UE看的文档说明，可以放在这里
+支持所有antd属性：见[antd文档](https://ant.design/components/input-cn/)
 
 <Preview>
   <Story name="Demo">
