--- a/packages/ui/timeline/stories/index.stories.mdx
+++ b/packages/ui/timeline/stories/index.stories.mdx
@@ -3,9 +3,12 @@ import {Demo} from './index.stories'
 
 <Meta title="设计文档/Welcome" component={Demo} />
 
-# OSUI Alert
+# OSUI Timeline
 
-一些给UE看的文档说明，可以放在这里
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/timeline-cn/)
+
 
 <Preview>
   <Story name="Demo">
