fix: 修改css和doc文件

--- a/packages/ui/alert/stories/index.stories.mdx
+++ b/packages/ui/alert/stories/index.stories.mdx
@@ -11,8 +11,9 @@ import {Demo} from './index.stories'
 
 支持所有antd属性：见[antd文档](https://ant.design/components/alert-cn/)
 
-### 使用方法
+### 其他说明
 
+若icon不传并且存在description,则会赋予默认的icon
 
 <Preview>
   <Story name="Demo">
