--- a/packages/ui/input/stories/index.stories.mdx
+++ b/packages/ui/input/stories/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="设计文档/Welcome" component={Demo} />
+<Meta title="OSUI-Input" component={Demo} />
 
 # OSUI Input
 
