--- a/packages/ui/tag/stories/index.stories.mdx
+++ b/packages/ui/tag/stories/index.stories.mdx
@@ -1,11 +1,21 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="设计文档/Welcome" component={Demo} />
+<Meta title="OSUI-Tag" component={Demo} />
 
 # OSUI Alert
 
-一些给UE看的文档说明，可以放在这里
+## API
+
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/tag-cn/)
+
+### 修改属性
+
+|参数|说明|类型|默认值|
+|:---|:----:|:---:|------:|
+|color|标签色(OSUI已支持预设颜色：'blue、red、purple、red、teal、yellow'，除之外颜色按原生显示)|string|-|
 
 <Preview>
   <Story name="Demo">
