--- a/packages/ui/search-select-list/stories/index.stories.mdx
+++ b/packages/ui/search-select-list/stories/index.stories.mdx
@@ -1,19 +1,31 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-Alert" component={Demo} />
+<Meta title="OSUI-search-select-list" component={Demo} />
 
-# OSUI Alert
+# OSUI Select-search-list
 
 ## API
 
 ### 基本属性
 
-支持所有antd属性：见[antd文档](https://ant.design/components/alert-cn/)
+支持所有antd的Tooltip文字提示的属性：见[antd文档](https://ant.design/components/tooltip-cn/#API)
 
-### 其他说明
+### 新增属性
 
-若icon不传并且存在description,则会赋予默认的icon
+| 参数 | 说明 | 类型 | 默认值 
+| --- | --- | --- | --- | 
+| popoverClassName | popover的className | string |  | 
+| btnClassName | button的className | string |  | 
+| placeholder | input搜索的placeholder内容 | string |  | 
+| btnName | 按钮的名称 | string |  | 
+| defaultMenuSelect | 默认选中的menu | string | 默认第一个值 
+| menuList | 导航列表，若不传的话就没有上面的导航列表 | array |   
+| selectlist | 下拉选项列表 | array |   
+| handleClickItem | 点击menu回传的函数 | function |   | 
+| handleSearch | 点击搜索回传的函数 | function |   
+| handleClickMenu | 点击下拉选项回传的函数 | function |   
+
 
 <Preview>
   <Story name="Demo">
