--- a/packages/ui/docs/stories/collapse/index.stories.mdx
+++ b/packages/ui/docs/stories/collapse/index.stories.mdx
@@ -5,7 +5,12 @@ import {Demo} from './index.stories'
 
 # OSUI-Collapse
 
-一些给UE看的文档说明，可以放在这里
+## API
+
+### 基本属性
+
+支持所有antd属性：见[antd文档](https://ant.design/components/collapse-cn/#API)
+
 
 <Preview>
   <Story name="Demo">
