--- a/packages/ui/docs/stories/switch/index.stories.mdx
+++ b/packages/ui/docs/stories/switch/index.stories.mdx
@@ -1,15 +1,15 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-Progress" component={Demo} />
+<Meta title="OSUI-Switch" component={Demo} />
 
-# OSUI Progress
+# OSUI Switch
 
 ## API
 
 ### 基本属性
 
-支持所有antd属性：见[antd文档](https://ant.design/components/progress-cn/#API)
+支持所有antd属性：见[antd文档](https://ant.design/components/switch-cn/#API)
 
 
 
