--- a/packages/ui/right-dropdown/stories/index.stories.mdx
+++ b/packages/ui/right-dropdown/stories/index.stories.mdx
@@ -1,21 +1,16 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-Tag" component={Demo} />
+<Meta title="OSUI-Right-Dropdown" component={Demo} />
 
-# OSUI Alert
+# OSUI Right-Dropdown
 
 ## API
 
 ### 基本属性
 
-支持所有antd属性：见[antd文档](https://ant.design/components/tag-cn/)
-
-### 修改属性
-
-|参数|说明|类型|默认值|
-|:---|:----:|:---:|------:|
-|color|标签色(OSUI已支持预设颜色：'blue、red、purple、red、teal、yellow'，除之外颜色按原生显示)|string|-|
+支持所有Dropdown属性：见[antd文档](https://ant.design/components/dropdown-cn/)
+支持所有Menu属性：见[antd文档](https://ant.design/components/menu-cn/)
 
 <Preview>
   <Story name="Demo">
