--- a/packages/ui/right-dropdown/stories/index.stories.mdx
+++ b/packages/ui/right-dropdown/stories/index.stories.mdx
@@ -1,9 +1,9 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-Right-Dropdown" component={Demo} />
+<Meta title="OSUI-Menu-Dropdown" component={Demo} />
 
-# OSUI Right-Dropdown
+# OSUI Menu-Dropdown
 
 ## API
 
