fix: 优化branch-dropdown代码，更新了传参的定义

--- a/packages/ui/branch-dropdown/stories/index.stories.mdx
+++ b/packages/ui/branch-dropdown/stories/index.stories.mdx
@@ -7,7 +7,8 @@ import {Demo} from './index.stories'
 
 ### 基本属性
 
-支持所有antd的Dropdown属性：见[antd文档](https://ant.design/components/dropdown-cn/)
+支持除了**overlay**的antd的Dropdown属性：见[antd文档](https://ant.design/components/dropdown-cn/)
+
 
 ### 新增属性
 
