--- a/packages/ui/search-select-list/stories/index.stories.mdx
+++ b/packages/ui/search-select-list/stories/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-search-select-list" component={Demo} />
+<Meta title="业务/OSUI-search-select-list" component={Demo} />
 
 # OSUI Select-search-list
 
@@ -13,18 +13,18 @@ import {Demo} from './index.stories'
 
 ### 新增属性
 
-| 参数 | 说明 | 类型 | 默认值 
-| --- | --- | --- | --- | 
-| popoverClassName | popover的className | string |  | 
-| btnClassName | button的className | string |  | 
-| placeholder | input搜索的placeholder内容 | string |  | 
-| btnName | 按钮的名称 | string |  | 
-| defaultMenuSelect | 默认选中的menu | string | 默认第一个值 
-| menuList | 导航列表，若不传的话就没有上面的导航列表 | array |   
-| selectlist | 下拉选项列表 | array |   
-| handleClickItem | 点击menu回传的函数 | function |   | 
-| handleSearch | 点击搜索回传的函数 | function |   
-| handleClickMenu | 点击下拉选项回传的函数 | function |   
+| 参数 | 说明 | 类型 | 默认值
+| --- | --- | --- | --- |
+| popoverClassName | popover的className | string |  |
+| btnClassName | button的className | string |  |
+| placeholder | input搜索的placeholder内容 | string |  |
+| btnName | 按钮的名称 | string |  |
+| defaultMenuSelect | 默认选中的menu | string | 默认第一个值
+| menuList | 导航列表，若不传的话就没有上面的导航列表 | array |
+| selectlist | 下拉选项列表 | array |
+| handleClickItem | 点击menu回传的函数 | function |   |
+| handleSearch | 点击搜索回传的函数 | function |
+| handleClickMenu | 点击下拉选项回传的函数 | function |
 
 
 <Preview>
