--- a/packages/ui/alert/stories/index.stories.mdx
+++ b/packages/ui/alert/stories/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="OSUI-Alert" component={Demo} />
+<Meta title="Alert" component={Demo} />
 
 # OSUI Alert
 
