--- a/packages/ui/docs/stories/branch-dropdown/index.stories.mdx
+++ b/packages/ui/docs/stories/branch-dropdown/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo} from './index.stories'
 
-<Meta title="BranchDropdown" component={Demo} />
+<Meta title="业务/BranchDropdown" component={Demo} />
 
 # OSUI BranchDropdown
 
