--- a/packages/ui/docs/stories/directory-navigator/index.stories.mdx
+++ b/packages/ui/docs/stories/directory-navigator/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {DirectoryNavigatorDemo} from './index.stories'
 
-<Meta title="DirectoryNavigator" />
+<Meta title="业务/DirectoryNavigator" />
 
 # DirectoryNavigator
 
