--- a/packages/ui/docs/stories/menu-dropdown/index.stories.mdx
+++ b/packages/ui/docs/stories/menu-dropdown/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import {Demo, ButtonDemo} from './index.stories'
 
-<Meta title="Menu-Dropdown" component={Demo} />
+<Meta title="业务/Menu-Dropdown" component={Demo} />
 
 # OSUI Menu-Dropdown
 
