--- a/packages/ui/drawer/stories/osui.stories.mdx
+++ b/packages/ui/drawer/stories/osui.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {Demo} from './index.stories'
+import {Demo} from './osui.stories'
 
 <Meta title="Drawer" component={Demo} />
 
