--- a/packages/ui/menu-dropdown/stories/osui.stories.mdx
+++ b/packages/ui/menu-dropdown/stories/osui.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {Demo, ButtonDemo} from './index.stories'
+import {Demo, ButtonDemo} from './osui.stories'
 
 <Meta title="业务/Menu-Dropdown" component={Demo} />
 
