--- a/packages/ui/select/stories/icloud.stories.mdx
+++ b/packages/ui/select/stories/icloud.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {Demo, MultipleDemo, Size} from './index.stories'
+import {Demo, MultipleDemo, Size} from './icloud.stories'
 
 <Meta title="Select" component={Demo} />
 
