--- a/packages/ui/directory-navigator/stories/osui.stories.mdx
+++ b/packages/ui/directory-navigator/stories/osui.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {DirectoryNavigatorDemo} from './index.stories'
+import {DirectoryNavigatorDemo} from './osui.stories'
 
 <Meta title="业务/DirectoryNavigator" />
 
