fix: 增加button default border高亮, success, error, warning 状态

--- a/packages/ui/badge/stories/icloud.stories.mdx
+++ b/packages/ui/badge/stories/icloud.stories.mdx
@@ -3,7 +3,7 @@ import {Demo} from './icloud.stories'
 
 <Meta title="Badge" component={Demo} />
 
-# OSUI Alert
+# OSUI Badge
 
 一些给UE看的文档说明，可以放在这里
 
