--- a/packages/ui/avatar/stories/osui.stories.mdx
+++ b/packages/ui/avatar/stories/osui.stories.mdx
@@ -3,7 +3,7 @@ import {Demo} from './osui.stories'
 
 <Meta title="Avatar" component={Demo} />
 
-# OSUI Alert
+# OSUI Avatar
 
 一些给UE看的文档说明，可以放在这里
 
