docs: icloud docs更新

--- a/packages/ui/input/stories/icloud.stories.mdx
+++ b/packages/ui/input/stories/icloud.stories.mdx
@@ -13,6 +13,8 @@ import {Demo, Size} from './icloud.stories'
   </Story>
 </Preview>
 
+## 不同尺寸
+
 <Preview>
   <Story name="Size">
         {Size()}
