docs: 更新通过验收的组件

--- a/packages/ui/button/stories/icloud.stories.mdx
+++ b/packages/ui/button/stories/icloud.stories.mdx
@@ -5,6 +5,8 @@ import {Demo, Face, Group} from './icloud.stories'
 
 # OSUI Button
 
+2020-9-28 通过UE视觉验收
+
 ### 基本属性
 
 支持所有antd属性：见[antd文档](https://ant.design/components/button-cn/#API)
