--- a/packages/ui/pagination/stories/icloud.stories.mdx
+++ b/packages/ui/pagination/stories/icloud.stories.mdx
@@ -3,9 +3,9 @@ import {Demo} from './icloud.stories'
 
 <Meta title="Pagination" component={Demo} />
 
-# OSUI Alert
+# OSUI Pagination
 
-一些给UE看的文档说明，可以放在这里
+2020-9-28 通过UE视觉验收
 
 <Preview>
   <Story name="Demo">
