--- a/packages/ui/form/stories/osui.stories.mdx
+++ b/packages/ui/form/stories/osui.stories.mdx
@@ -3,13 +3,13 @@ import {Demo, StatusDemo} from './osui.stories'
 
 <Meta title="Form" component={Demo} />
 
-# OSUI Drawer
+# OSUI Form
 
 ## API
 
 ### 基本属性
 
-支持所有antd属性：见[antd文档](https://ant.design/components/drawer-cn/)
+支持所有antd属性：见[antd文档](https://ant.design/components/form-cn/)
 
 <Preview>
   <Story name="Demo">
