fix: modal icloud theme 调整

--- a/packages/ui/modal/stories/icloud.stories.mdx
+++ b/packages/ui/modal/stories/icloud.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import {Demo, Size, Confirm, AutoHeight} from './index.stories'
+import {Demo, Size, Confirm, AutoHeight} from './icloud.stories'
 
 <Meta title="Modal" component={Demo} />
 
