--- a/packages/ui/avatar/stories/icloud.stories.mdx
+++ b/packages/ui/avatar/stories/icloud.stories.mdx
@@ -5,7 +5,9 @@ import {Demo} from './icloud.stories'
 
 # OSUI Avatar
 
-一些给UE看的文档说明，可以放在这里
+2020-9-28 通过UE视觉验收
+
+## 示例
 
 <Preview>
   <Story name="Demo">
