--- a/packages/ui/switch/stories/icloud.stories.mdx
+++ b/packages/ui/switch/stories/icloud.stories.mdx
@@ -13,8 +13,10 @@ import * as stories from './icloud.stories'
 
 支持所有antd属性：见[antd文档](https://ant.design/components/switch-cn/#API)
 
-
-
 <Preview>
   <Story name="Demo" story={stories.Demo} />
+</Preview>
+
+<Preview>
+  <Story name="Size" story={stories.Size} />
 </Preview>
