docs: osui demo 完善

--- a/packages/ui/table/stories/osui.stories.mdx
+++ b/packages/ui/table/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Table"  />
+<Meta title="设计文档/Table 表格"  />
 
 # OSUI Alert
 
