--- a/packages/ui/form/stories/osui.stories.mdx
+++ b/packages/ui/form/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Form"  />
+<Meta title="设计文档/Form 表单"  />
 
 # OSUI Form
 
