--- a/packages/ui/modal/stories/osui.stories.mdx
+++ b/packages/ui/modal/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Modal"  />
+<Meta title="设计文档/Modal 对话框"  />
 
 # OSUI Modal
 
