--- a/packages/ui/pagination/stories/osui.stories.mdx
+++ b/packages/ui/pagination/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Pagination"  />
+<Meta title="设计文档/Pagination 分页"  />
 
 # OSUI Alert
 
