--- a/packages/ui/progress/stories/osui.stories.mdx
+++ b/packages/ui/progress/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Progress"  />
+<Meta title="设计文档/Progress 进度条"  />
 
 # OSUI Progress
 
