--- a/packages/ui/tag/stories/osui.stories.mdx
+++ b/packages/ui/tag/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Tag"  />
+<Meta title="设计文档/Tag 标签"  />
 
 # OSUI Alert
 
