--- a/packages/ui/timeline/stories/osui.stories.mdx
+++ b/packages/ui/timeline/stories/osui.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './osui.stories'
 
-<Meta title="Timeline"  />
+<Meta title="设计文档/Timeline 时间轴"  />
 
 # OSUI Timeline
 
