--- a/packages/ui/docs/osui/stories/alert/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/alert/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Alert"  />
+<Meta title="设计文档/Alert 警告提示" component={Alert}/>
 
 # OSUI Alert
 
