--- a/packages/ui/docs/osui/stories/back-top/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/back-top/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="BackTop"  />
+<Meta title="设计文档/BackTop 回到顶部" />
 
 # BackTop
 
