--- a/packages/ui/docs/osui/stories/tabs/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/tabs/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Tabs"  />
+<Meta title="设计文档/Tabs 标签页"  />
 
 # OSUI Alert
 
