--- a/packages/ui/docs/osui/stories/avatar/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/avatar/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Avatar"  />
+<Meta title="设计文档/Avatar 头像" />
 
 # OSUI Avatar
 
