--- a/packages/ui/docs/osui/stories/form/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/form/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Form"  />
+<Meta title="设计文档/Form 表单"  />
 
 # OSUI Form
 
