--- a/packages/ui/docs/osui/stories/radio/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/radio/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Radio"  />
+<Meta title="设计文档/Radio 单选框"  />
 
 # OSUI Radio
 
