--- a/packages/ui/docs/osui/stories/space/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/space/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
-<Meta title="Space"  />
+<Meta title="设计文档/Space 间距"  />
 
 # OSUI Space
 
