fix: table调整增加no border的用法

--- a/packages/ui/docs/icloud/stories/table/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/table/index.stories.mdx
@@ -10,3 +10,8 @@ import * as stories from './index.stories'
 <Preview>
   <Story name="Demo" story={stories.Demo} />
 </Preview>
+
+## 边框情况
+<Preview>
+  <Story name="Border" story={stories.Border} />
+</Preview>
