--- a/packages/ui/docs/osui/stories/table/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/table/index.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories';
+import * as stories from './index.stories'
 
 <Meta title="设计文档/Table 表格"  />
 
@@ -9,4 +9,9 @@ import * as stories from './index.stories';
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
+</Preview>
+
+## 边框情况
+<Preview>
+  <Story name="Border" story={stories.Border} />
 </Preview>
