--- a/packages/ui/table/stories/icloud.stories.mdx
+++ b/packages/ui/table/stories/icloud.stories.mdx
@@ -10,3 +10,8 @@ import * as stories from './icloud.stories'
 <Preview>
   <Story name="Demo" story={stories.Demo} />
 </Preview>
+
+## 边框情况
+<Preview>
+  <Story name="Border" story={stories.Border} />
+</Preview>
