--- a/packages/ui/docs/icloud/stories/button/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/button/index.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
 <Meta title="设计文档/Button 按钮" />
 
