--- a/packages/ui/docs/icloud/stories/alert/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/alert/index.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta, Story, Canvas} from '@storybook/addon-docs/blocks';
 import Alert from '@osui/alert';
-import * as stories from './index.stories'
+import * as stories from './index.stories';
 
 <Meta title="设计文档/Alert 警告提示" component={Alert}/>
 
