--- a/packages/ui/badge/stories/icloud.stories.mdx
+++ b/packages/ui/badge/stories/icloud.stories.mdx
@@ -3,10 +3,28 @@ import * as stories from './icloud.stories'
 
 <Meta title="设计文档/Badge 徽标数" />
 
-# OSUI Badge
+# Badge 徽标数
 
-一些给UE看的文档说明，可以放在这里
+通过醒目的视觉标注提醒用户重要的信息，如新消息或者新功能上线。一般出现在图标或文字的右上角。
+
+## 主要样式
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
 </Preview>
+
+## 信息较多的样式
+
+<Preview>
+  <Story name="OverflowCount" story={stories.OverflowCount} />
+</Preview>
+
+## 状态徽标
+
+<Preview>
+  <Story name="Status" story={stories.Status} />
+</Preview>
+
+## 文字徽标
+
+说明： 文字徽标不属于徽标，请查看Tag
