fix: tag icloud 主题修复

--- a/packages/ui/tag/stories/icloud.stories.mdx
+++ b/packages/ui/tag/stories/icloud.stories.mdx
@@ -15,7 +15,12 @@ import * as stories from './icloud.stories'
 
 |参数|说明|类型|默认值|
 |:---|:----:|:---:|------:|
-|color|标签色(OSUI已支持预设颜色：'blue、red、purple、red、teal、yellow'，除之外颜色按原生显示)|string|-|
+|color|标签色(OSUI已支持预设颜色：'blue、red、green、yellow'，除之外颜色按原生显示)|string|-|
+
+
+## 主要样式
+
+根据不同场景需要自定义样式
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
