--- a/packages/ui/tag/stories/osui.stories.mdx
+++ b/packages/ui/tag/stories/osui.stories.mdx
@@ -15,7 +15,7 @@ import * as stories from './osui.stories'
 
 |参数|说明|类型|默认值|
 |:---|:----:|:---:|------:|
-|color|标签色(OSUI已支持预设颜色：'blue、red、purple、red、teal、yellow'，除之外颜色按原生显示)|string|-|
+|color|标签色(OSUI已支持预设颜色：'blue、red、purple、green、yellow'，除之外颜色按原生显示)|string|-|
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
