--- a/packages/ui/docs/icloud/stories/gap/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/gap/index.stories.mdx
@@ -1,11 +1,11 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories'
 
-<Meta title="设计文档/Slider 滑动输入条"  />
+<Meta title="设计文档/Gap 间隔"  />
 
-# OSUI Slider
+# OSUI Gap
 
-支持所有antd属性：见[antd文档](https://ant.design/components/slider-cn/)
+支持所有antd属性：见[antd文档](https://ant.design/components/gap-cn/)
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
