--- a/packages/ui/text-overflow-tooltip/stories/osui.stories.mdx
+++ b/packages/ui/text-overflow-tooltip/stories/osui.stories.mdx
@@ -1,11 +1,11 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './icloud.stories';
 
-<Meta title="{ComponentName}"  />
+<Meta title="TextOverflowTooltip"  />
 
-# OSUI {ComponentName}
+# OSUI TextOverflowTooltip
 
-支持所有antd属性：见[antd文档](https://ant.design/components/{PkgComponentName}-cn/)
+支持所有antd属性：见[antd文档](https://ant.design/components/text-overflow-tooltip-cn/)
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
