--- a/packages/ui/docs/osui/stories/dropdown/index.stories.mdx
+++ b/packages/ui/docs/osui/stories/dropdown/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Dropdown 下拉菜单"  />
+<Meta title="Dropdown" />
 
 # OSUI Dropdown
 
