fix: 调整Badge icloud主题样式

--- a/packages/ui/back-top/stories/icloud.stories.mdx
+++ b/packages/ui/back-top/stories/icloud.stories.mdx
@@ -32,6 +32,10 @@ import * as stories from './icloud.stories';
     </tbody>
 </table>
 
+## 规范：
+
+<img src="https://newicafe.baidu.com/rest/attachment/v1/file/stream/7093861" />
+
 ## 示例：
 
 <Preview>
