--- a/packages/ui/badge/stories/icloud.stories.mdx
+++ b/packages/ui/badge/stories/icloud.stories.mdx
@@ -7,24 +7,7 @@ import * as stories from './icloud.stories';
 
 通过醒目的视觉标注提醒用户重要的信息，如新消息或者新功能上线。一般出现在图标或文字的右上角。
 
-## 主要样式
-
+## 规范：
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <img src="https://newicafe.baidu.com/rest/attachment/v1/file/stream/7093969" />
 </Preview>
-
-## 信息较多的样式
-
-<Preview>
-  <Story name="OverflowCount" story={stories.OverflowCount} />
-</Preview>
-
-## 状态徽标
-
-<Preview>
-  <Story name="Status" story={stories.Status} />
-</Preview>
-
-## 文字徽标
-
-说明： 文字徽标不属于徽标，请查看Tag
