fix: 调整drawer icloud样式

--- a/packages/ui/badge/stories/icloud.stories.mdx
+++ b/packages/ui/badge/stories/icloud.stories.mdx
@@ -7,7 +7,8 @@ import * as stories from './icloud.stories';
 
 通过醒目的视觉标注提醒用户重要的信息，如新消息或者新功能上线。一般出现在图标或文字的右上角。
 
-## 规范：
+## 示例：
+
 <Preview>
-  <img src="https://newicafe.baidu.com/rest/attachment/v1/file/stream/7093969" />
+  <Story name="Demo" story={stories.Demo} />
 </Preview>
