--- a/packages/ui/docs/icloud/stories/result/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/result/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Result"  />
+<Meta title="设计文档/Result 结果"  />
 
 # OSUI Result
 
