--- a/packages/ui/mentions/stories/icloud.stories.mdx
+++ b/packages/ui/mentions/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './icloud.stories';
 
-<Meta title="设计文档/Mentions"  />
+<Meta title="设计文档/Mentions 提及"  />
 
 # OSUI Mentions
 
