--- a/packages/ui/docs/icloud/stories/descriptions/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/descriptions/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Descriptions"  />
+<Meta title="设计文档/Descriptions 描述列表"  />
 
 # OSUI Descriptions
 
