--- a/packages/ui/docs/icloud/stories/image/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/image/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Image"  />
+<Meta title="设计文档/Image 图片"  />
 
 # OSUI Image
 
