--- a/packages/ui/docs/icloud/stories/notification/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/notification/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Notification"  />
+<Meta title="设计文档/Notification 通知提醒框"  />
 
 # OSUI Notification
 
