--- a/packages/ui/docs/icloud/stories/popconfirm/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/popconfirm/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Popconfirm"  />
+<Meta title="设计文档/Popconfirm 气泡确认框"  />
 
 # OSUI Popconfirm
 
