--- a/packages/ui/docs/icloud/stories/upload/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/upload/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './index.stories';
 
-<Meta title="设计文档/Upload"  />
+<Meta title="设计文档/Upload 上传"  />
 
 # OSUI Upload
 
