--- a/packages/ui/statistic/stories/icloud.stories.mdx
+++ b/packages/ui/statistic/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './icloud.stories';
 
-<Meta title="设计文档/Statistic"  />
+<Meta title="设计文档/Statistic 统计数值"  />
 
 # OSUI Statistic
 
