docs: 增加布局类文档
Change-Id: Ife386dcf60823b7768293bc792496165c36e8088

--- a/packages/ui/gap/stories/icloud.stories.mdx
+++ b/packages/ui/gap/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './icloud.stories';
 
-<Meta title="设计文档/Gap 间隔"  />
+<Meta title="布局/Gap 间隔"  />
 
 # OSUI Gap
 
