chore: 添加ui对flex-centered的依赖, 更新docs
Change-Id: Id131f0da522fe6bd47454a291ad0c221d26d57cb

--- a/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
@@ -8,5 +8,9 @@ import * as stories from './index.stories';
 支持所有antd属性：见[antd文档](https://ant.design/components/auto-complete-cn/)
 
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <Story name="含推荐功能的输入框" story={stories.Demo1} />
+</Preview>
+
+<Preview>
+  <Story name="含搜索联想功能的输入框" story={stories.Demo2} />
 </Preview>
