--- a/packages/ui/popover/stories/icloud.stories.mdx
+++ b/packages/ui/popover/stories/icloud.stories.mdx
@@ -8,5 +8,13 @@ import * as stories from './icloud.stories';
 一些给UE看的文档说明，可以放在这里
 
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <Story name="基本" story={stories.Demo1} />
+</Preview>
+
+<Preview>
+  <Story name="不同方位" story={stories.Demo2} />
+</Preview>
+
+<Preview>
+  <Story name="内容可关闭" story={stories.Demo3} />
 </Preview>
