--- a/packages/ui/empty/stories/icloud.stories.mdx
+++ b/packages/ui/empty/stories/icloud.stories.mdx
@@ -8,5 +8,13 @@ import * as stories from './icloud.stories';
 支持所有antd属性：见[antd文档](https://ant.design/components/empty-cn/)
 
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <Story name="空状态" story={stories.Demo1} />
+</Preview>
+
+<Preview>
+  <Story name="404" story={stories.Demo2} />
+</Preview>
+
+<Preview>
+  <Story name="Error" story={stories.Demo3} />
 </Preview>
