--- a/packages/ui/docs/icloud/stories/joyride/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/joyride/index.stories.mdx
@@ -1,11 +1,11 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
-import * as stories from './icloud.stories';
+import * as stories from './index.stories';
 
-<Meta title="joyride"  />
+<Meta title="设计文档/Joyride 新功能点引导"  />
 
 # OSUI joyride
 
-支持所有antd属性：见[antd文档](https://ant.design/components/joyride-cn/)
+实现基于<a href="https://docs.react-joyride.com/" target="_blank" rel="noreferrer">react-joyride</a>。api可查看它的文档
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
