--- a/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
@@ -14,3 +14,7 @@ import * as stories from './index.stories';
 <Preview>
   <Story name="含搜索联想功能的输入框" story={stories.Demo2} />
 </Preview>
+
+<Preview>
+  <Story name="新增参数" story={stories.NewProps} />
+</Preview>
