--- a/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/auto-complete/index.stories.mdx
@@ -8,13 +8,5 @@ import * as stories from './index.stories';
 支持所有antd属性：见[antd文档](https://ant.design/components/auto-complete-cn/)
 
 <Preview>
-  <Story name="含推荐功能的输入框" story={stories.Demo1} />
-</Preview>
-
-<Preview>
-  <Story name="含搜索联想功能的输入框" story={stories.Demo2} />
-</Preview>
-
-<Preview>
-  <Story name="新增参数" story={stories.NewProps} />
+  <Story name="Demo" story={stories.Demo1} />
 </Preview>
