chore: quick-edit加入到ui
Change-Id: I26e36729d7ad913ad68c24754c5c0cbae4cfb25f

--- a/packages/ui/quick-edit/stories/icloud.stories.mdx
+++ b/packages/ui/quick-edit/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs/blocks';
 import * as stories from './icloud.stories';
 
-<Meta title="快速编辑QuickEdit"  />
+<Meta title="设计文档/QuickEdit 快速编辑"  />
 
 # OSUI quick-edit
 
