--- a/packages/ui/docs/icloud/stories/quick-edit/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/quick-edit/index.stories.mdx
@@ -3,6 +3,10 @@ import * as stories from './index.stories';
 
 <Meta title="设计文档/QuickEdit 快速编辑"  />
 
+# OSUI quick-edit
+
+支持所有antd属性：见[antd文档](https://ant.design/components/quick-edit-cn/)
+
 <Preview>
   <Story name="Demo" story={stories.Demo} />
 </Preview>
