--- a/packages/ui/docs/icloud/stories/card/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/card/index.stories.mdx
@@ -8,5 +8,5 @@ import * as stories from './index.stories';
 支持所有antd属性：见[antd文档](https://ant.design/components/card-cn/)
 
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <Story name="自适应卡片" story={stories.Demo} />
 </Preview>
