fix: 升级antd到4.18.4,但是现在table exapandable和rowSelection的顺序有问题
Change-Id: I969f5629bf013497f622fc0d0c504d14f7c986b5

--- a/packages/ui/tooltip/stories/icloud.stories.mdx
+++ b/packages/ui/tooltip/stories/icloud.stories.mdx
@@ -1,9 +1,8 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs';
-import Tooltip from '../src';
 import * as stories from './icloud.stories';
 
 
-<Meta title="设计文档/Tooltip 文字提示" component={Tooltip}  />
+<Meta title="设计文档/Tooltip 文字提示" />
 
 # OSUI Tooltip
 
