--- a/packages/ui/theme-provider/stories/icloud.stories.mdx
+++ b/packages/ui/theme-provider/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs';
 import * as stories from './icloud.stories';
 
-<Meta title="ThemeProvider"  />
+<Meta title="设计文档/ThemeProvider"  />
 
 # OSUI ThemeProvider
 
