--- a/packages/ui/docs/icloud/stories/tag/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/tag/index.stories.mdx
@@ -23,5 +23,10 @@ import * as stories from './index.stories';
 根据不同场景需要自定义样式
 
 <Preview>
-  <Story name="Demo" story={stories.Demo} />
+  <Story name="基本示例" story={stories.Demo} />
+</Preview>
+
+
+<Preview>
+  <Story name="增加Tag" story={stories.Add} />
 </Preview>
