--- a/packages/ui/spin/stories/icloud.stories.mdx
+++ b/packages/ui/spin/stories/icloud.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs';
 import * as stories from './icloud.stories';
 
-<Meta title="设计文档/Spin 加载中"  />
+<Meta title="反馈/Spin 加载中"  />
 
 # OSUI Spin
 
