--- a/packages/ui/docs/icloud/stories/segmented/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/segmented/index.stories.mdx
@@ -1,11 +1,11 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs';
 import * as stories from './index.stories';
 
-<Meta title="反馈/Spin 加载中"  />
+<Meta title="Segmented"  />
 
-# OSUI Spin
+# OSUI Segmented
 
-支持所有antd属性：见[antd文档](https://ant.design/components/spin-cn/)
+支持所有antd属性：见[antd文档](https://ant.design/components/segmented-cn/)
 
 <Preview>
   <Story name="Demo" story={stories.Demo} />
