--- a/packages/ui/docs/icloud/stories/segmented/index.stories.mdx
+++ b/packages/ui/docs/icloud/stories/segmented/index.stories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Story, Preview} from '@storybook/addon-docs';
 import * as stories from './index.stories';
 
-<Meta title="Segmented"  />
+<Meta title="'设计文档/Segmented"  />
 
 # OSUI Segmented
 
